--- a/src/main/webapp/propertyadmin/pages-error-400.html
+++ b/src/main/webapp/propertyadmin/pages-error-400.html
@@ -33,9 +33,9 @@
         <div class="error-box">
             <div class="error-body text-center">
                 <h1>400</h1>
-                <h3 class="text-uppercase">Page Not Found !</h3>
-                <p class="text-muted m-t-30 m-b-30">YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
-                <a href="index.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Back to home</a> </div>
+                <h3 class="text-uppercase">Datos Erroneos!</h3>
+                <p class="text-muted m-t-30 m-b-30">Revise los datos e ingreselos nuevamente</p>
+                <a href="/propertyadmin/log-in.jsp" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Volver</a> </div>
             
         </div>
     </section>
