--- a/src/main/webapp/table-footable.html
+++ b/src/main/webapp/table-footable.html
@@ -920,7 +920,7 @@
                                 <table id="demo-foo-row-toggler" class="table toggle-circle table-hover">
                                     <thead>
                                         <tr>
-                                            <th class="footable-visible footable-first-column footable-sortable" data-toggle="true"> First Name </th>
+                                            <th data-toggle="true"> First Name </th>
                                             <th> Last Name </th>
                                             <th data-hide="phone"> Job Title </th>
                                             <th data-hide="all"> DOB </th>
