--- a/src/main/webapp/pages-error-400.html
+++ b/src/main/webapp/pages-error-400.html
@@ -35,7 +35,7 @@
                 <h1>400</h1>
                 <h3 class="text-uppercase">Datos Erroneos!</h3>
                 <p class="text-muted m-t-30 m-b-30">Revise los datos e ingreselos nuevamente</p>
-                <a href="/propertyadmin/log-in.jsp" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Volver</a> </div>
+                <a href="/login.jsp.jsp" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Volver</a> </div>
             
         </div>
     </section>
